# spirv_interop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
spirv_interop/: Cargo.toml
spirv_interop/src/: lib.rs
spirv_interop_examples/: Cargo.toml  compile-shaders.sh
spirv_interop_macros/: Cargo.toml
spirv_interop_macros/src/: lib.rs
